--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "../../",
-    "rootDir": "./src",
+    "rootDir": "../../",
     "outDir": "./dist",
     "composite": true
   },
   "include": [
-    "src/**/*"
+    "**/**/*.ts"
   ],
   "exclude": [
     "node_modules",
