--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@minicommerce/shared",
   "version": "1.0.0",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./index.ts",
+  "types": "./index.ts",
   "private": true,
   "devDependencies": {}
 }
