--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-NODE_ENV='development'
-BACKEND_PORT=5510
+NODE_ENV=development
+BACKEND_PORT=80
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
