--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "bun run --hot src/index.ts",
-    "compile": "bun build ./src/index.ts --outdir ./dist --target bun",
+    "build": "bun build ./src/index.ts --outdir ./dist --target bun",
     "start": "bun run dist/index.js"
   },
   "dependencies": {
