--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -6,7 +6,8 @@
     "composite": true
   },
   "include": [
-    "src/**/*", "../../config"
+    "src/**/*.ts",
+    "../../config"
   ],
   "references": [
     {
