--- a/docker/dockerfile.backend
+++ b/docker/dockerfile.backend
@@ -1,17 +1,18 @@
 # base development image
 FROM oven/bun:1.0.3 AS development
-WORKDIR /usr/src/app
+WORKDIR /usr/src
 COPY package*.json ./
 COPY tsconfig.json ./
 COPY turbo.json ./
 COPY config ./config
+COPY apps ./apps
 COPY packages ./packages
 RUN rm -f bun.lockb && bun install
 CMD [ "bun", "dev" ]
 
 # preparing production build
 FROM development as builder
-WORKDIR /usr/src/app
+WORKDIR /usr/src
 RUN rm -rf node_modules
 RUN bun install --production
 RUN bun compile
@@ -19,8 +20,7 @@ RUN bun compile
 # run production container
 FROM oven/bun:1.0.3 as production
 WORKDIR /app
-RUN apt update && apt install curl -y
 #ADD custom_ca_root.crt ## example adding custom CA certificate
 #RUN chmod 644 /usr/local/share/ca-certificates/custom_ca_root.crt && update-ca-certificates
-COPY --from=builder /usr/src/app/packages/backend/dist ./
+COPY --from=builder /usr/src/apps/backend/dist ./
 CMD [ "bun", "index.js" ]
