Domain Driven Modeling 1/2

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-NODE_ENV=development
+# api backend
+NODE_ENV='development'
 BACKEND_PORT=80
+DATABASE_URL="postgresql://postgres:postgres@database:5432/mydb"
+
+# database
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
