--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   backend:
     build:
       context: .
-      target: production
+      target: development
       dockerfile: ./docker/dockerfile.backend
     env_file: .env
     volumes:
