--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,6 +13,6 @@
     "hono": "^3.7.1"
   },
   "devDependencies": {
-    "@minicommerce/shared": "workspace:*"
+    "@minicommerce/domain": "workspace:*"
   }
 }
