--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,6 +10,7 @@
     "start": "bun run dist/index.js"
   },
   "dependencies": {
+    "fastify": "^4.23.2",
     "hono": "^3.7.1"
   },
   "devDependencies": {
