--- a/docker/dockerfile.backend
+++ b/docker/dockerfile.backend
@@ -7,7 +7,8 @@ COPY turbo.json ./
 COPY config ./config
 COPY apps ./apps
 COPY packages ./packages
-RUN rm -f bun.lockb && bun install
+RUN bun install
+RUN bunx prisma generate
 CMD [ "bun", "dev" ]
 
 # preparing production build
@@ -18,7 +19,7 @@ RUN bun install --production
 RUN bun compile
 
 # run production container
-FROM oven/bun:1.0.3 as production
+FROM oven/bun:1.0.3-alpine as production
 WORKDIR /app
 #ADD custom_ca_root.crt ## example adding custom CA certificate
 #RUN chmod 644 /usr/local/share/ca-certificates/custom_ca_root.crt && update-ca-certificates
