--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
   "scripts": {
     "dev": "turbo run dev",
     "compile": "turbo run build",
-    "start": "turbo run start --filter=./apps/backend"
+    "start": "turbo run start --filter=./apps/backend",
+    "db:dev": "bunx prisma migrate dev"
+  },
+  "prisma": {
+    "schema": "packages/infrastructure/data/prisma/schema.prisma"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
+    "inversify": "^6.0.1",
+    "reflect-metadata": "^0.1.13",
     "turbo": "latest"
   },
   "devDependencies": {
     "bun-types": "^1.0.3",
-    "dotenv-cli": "^7.3.0"
+    "dotenv-cli": "^7.3.0",
+    "@minicommerce/shared": "workspace:*"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
